# asgi-compression

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
asgi_compression/: __init__.py  base.py  brotli.py  gzip.py  identity.py  middleware.py  types.py  zstd.py
tests/: conftest.py  test_gzip.py  test_middleware.py  types.py  utils.py
